--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: publish_from_ideas
 on:
   schedule:
-    # - cron: '15 23 * * *'   # 08:15 JST (= 23:15 UTC)
+    - cron: '15 23 * * *'   # 08:15 JST (= 23:15 UTC)
   workflow_dispatch:
 
 jobs:
