--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,6 +37,6 @@ jobs:
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add posts/bonfillet/*.md
+          git add posts/sabou/*.md
           git diff --cached --quiet || git commit -m "chore: auto-generate bonfillet posts"
           git push
