--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,9 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # push するために write 権限を明示
     permissions:
-      contents: write
+      contents: write          # push するので write 権限を明示
 
     steps:
       - uses: actions/checkout@v4
@@ -24,19 +23,31 @@ jobs:
 
       - name: Install dependencies
         run: |
-          # openai v1 系 & markdown パーサ
-          pip install "openai>=1.3" markdown
+          # OpenAI v1 系 + 投稿用ライブラリ
+          pip install "openai>=1.3" markdown \
+                     python-frontmatter requests python-slugify
 
-      - name: Generate articles
+      # ────────── 記事生成 ──────────
+      - name: Generate markdown article (1/day)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
           python scripts/generate_from_ideas.py
 
+      # ────────── 生成ファイルをコミット ──────────
       - name: Commit & push generated posts
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add posts/sabou/*.md
-          git diff --cached --quiet || git commit -m "chore: auto-generate bonfillet posts"
+          git diff --cached --quiet || git commit -m "chore: auto-generate sabou posts"
           git push
+
+      # ────────── WordPress に公開 ──────────
+      - name: Post latest markdown to WordPress
+        env:
+          WP_URL:       ${{ secrets.WP_URL }}
+          WP_USER:      ${{ secrets.WP_USER }}
+          WP_APP_PASS:  ${{ secrets.WP_APP_PASS }}
+        run: |
+          python scripts/post_to_wp.py
