--- a/data/ideas.json
+++ b/data/ideas.json
@@ -393,5 +393,535 @@
     "slug": "momentum-great-catch-board",
     "title": "“Great Catch”ボードで問題発見を称賛",
     "prompt": "ミスの早期発見者を称賛する文化を作り、品質とモメンタムを両立した例を提案してください."
+  },
+   {
+    "slug": "ritual-daily-checkin",
+    "title": "1日3分 チームビルディング“腕チェックイン”のススメ",
+    "prompt": "ボンフィレットを活用して、朝礼でメンバーの気分を可視化するチェックイン儀式を紹介してください。"
+  },
+  {
+    "slug": "ritual-gratitude-round",
+    "title": "感謝ラウンドでポジティブな空気を注入する方法",
+    "prompt": "毎日終業前に感謝を1つ伝え合う“グラティチュードラウンド”の運用手順と効果を提案してください。"
+  },
+  {
+    "slug": "ritual-monday-mantra",
+    "title": "月曜マンタラで週の集中力を高める",
+    "prompt": "週初めにマントラ（合言葉）を唱えて士気を上げるリチュアルの設計を解説してください。"
+  },
+  {
+    "slug": "ritual-friday-highlights",
+    "title": "金曜ハイライト共有で学びと喜びを締めくくる",
+    "prompt": "週の最後に“今週のベスト瞬間”を共有する仕組みを導入しチームの一体感を高める方法を説明してください。"
+  },
+  {
+    "slug": "ritual-15min-reading",
+    "title": "毎朝15分の読書リチュアルで知的スイッチON",
+    "prompt": "始業前に本を読む短時間リチュアルを実施し、知識共有まで行うフローを提案してください。"
+  },
+  {
+    "slug": "ritual-standup-stretch",
+    "title": "スタンドアップ前のストレッチで集中力UP",
+    "prompt": "朝会前に1分ストレッチを組み込み、健康とモチベーションを同時に上げる施策を紹介してください。"
+  },
+  {
+    "slug": "ritual-goal-journal",
+    "title": "1日1行ゴールジャーナルで目標を可視化",
+    "prompt": "各自が毎朝ノートに今日の最重要ゴールを書き、共有するジャーナルリチュアルを説明してください。"
+  },
+  {
+    "slug": "ritual-random-kindness",
+    "title": "ランダム親切アラームで優しさを循環させる",
+    "prompt": "Slack Bot がランダムで親切タスクを配布し、チームの思いやりを醸成する仕組みを提案してください。"
+  },
+  {
+    "slug": "ritual-water-reminder",
+    "title": "給水リマインダーで健康と雑談を同時に促す",
+    "prompt": "1時間ごとに立ち上がり給水するリマインダーを設定し、自然な雑談機会を生む方法を解説してください。"
+  },
+  {
+    "slug": "ritual-today-i-learned",
+    "title": "“TIL”共有チャネルで小さな学びを積み上げる",
+    "prompt": "Today I Learned を日次で共有するSlackチャネルを運用し、ナレッジ蓄積を促進するステップを紹介してください."
+  },
+  {
+    "slug": "ritual-focus-bell",
+    "title": "集中ベルで全員一斉ディープワークスタート",
+    "prompt": "オフィスまたはオンラインでベルを鳴らし、25分集中タイムを同期させるリチュアルを説明してください。"
+  },
+  {
+    "slug": "ritual-lunch-photo",
+    "title": "ランチフォトでリモートでも食卓を共有",
+    "prompt": "毎昼食の写真を共有し雑談と健康意識を高める軽量リチュアルを提案してください。"
+  },
+  {
+    "slug": "ritual-goal-ring",
+    "title": "目標達成の“ゴールリング”を鳴らして喜び合う",
+    "prompt": "タスク完了時に鐘を鳴らすアクションを取り入れ、チームの達成感を共有する方法を解説してください。"
+  },
+  {
+    "slug": "ritual-weekly-shoutout",
+    "title": "週次シャウトアウトで称賛の連鎖を作る",
+    "prompt": "金曜午後にハイライト＋称賛を公表し、ポジティブフィードバックを文化にする運用法を示してください。"
+  },
+  {
+    "slug": "ritual-silent-start",
+    "title": "“サイレントスタート”で朝の集中を最大化",
+    "prompt": "出勤後最初の30分をチャット・会話禁止にし、各自集中タスクに取り組む儀式を設計してください。"
+  },
+  {
+    "slug": "ritual-micro-learning-card",
+    "title": "マイクロ学習カードを朝礼で1枚共有",
+    "prompt": "毎朝1枚の学習カードを共有し、継続学習を文化にするリチュアルを提案してください。"
+  },
+  {
+    "slug": "ritual-graceful-goodbye",
+    "title": "退勤前の“グレースフルGoodbye”で余韻を残す",
+    "prompt": "退勤時に短い感謝メッセージを残し、仕事モードからオフへ切り替える習慣を紹介してください。"
+  },
+  {
+    "slug": "ritual-weekly-walk",
+    "title": "水曜ウォーキングミーティングで血流と発想UP",
+    "prompt": "週1回の歩きながらの1on1を導入し、健康と創造性を高めた事例を紹介してください。"
+  },
+  {
+    "slug": "ritual-focus-music-sync",
+    "title": "集中BGMを同期再生し“共同フロー”を作る",
+    "prompt": "Spotifyセッションで同じBGMを流し、没頭感を共有するリチュアルを説明してください."
+  },
+  {
+    "slug": "ritual-two-true-one-wow",
+    "title": "初回MTGで“2真実1ワオ”アイスブレイク",
+    "prompt": "メンバーが自己紹介で2つの事実と1つの驚きを語り、親近感を高めるゲームを紹介してください。"
+  },
+  {
+    "slug": "ritual-hourly-stretch-gif",
+    "title": "ストレッチGIFボットで姿勢改善リチュアル",
+    "prompt": "1時間ごとにストレッチGIFを投稿するBotで体の凝りを防ぐ方法を解説してください。"
+  },
+  {
+    "slug": "ritual-daily-intent",
+    "title": "“今日のIntent”を朝に宣言して自己管理",
+    "prompt": "一日の意図をSlackで宣言し、終業時に振り返る習慣を提案してください。"
+  },
+  {
+    "slug": "ritual-code-kata",
+    "title": "毎朝10分コードカタで技術筋トレ",
+    "prompt": "アルゴリズム問題やTDDカタを短時間で行う日次リチュアルを紹介してください。"
+  },
+  {
+    "slug": "ritual-tidy-desk-five",
+    "title": "終業前5分デスク整理で翌朝の勢いを作る",
+    "prompt": "勤務終了5分前に全員でデスク/デスクトップを整理する儀式を説明してください。"
+  },
+  {
+    "slug": "ritual-grateful-ping",
+    "title": "毎日ランダムに“感謝Ping”を飛ばすBot",
+    "prompt": "Botがランダムにペアを選び感謝メッセを促す仕組みを解説してください。"
+  },
+  {
+    "slug": "ritual-micro-meditation",
+    "title": "昼休み5分マイクロ瞑想で午後の集中力を回復",
+    "prompt": "ガイド音声付き瞑想をチームで実践し、午後のパフォーマンスを高める方法を説明してください。"
+  },
+  {
+    "slug": "ritual-daily-doodle",
+    "title": "デイリードゥードゥルで創造脳をウォームアップ",
+    "prompt": "朝礼前に60秒で落書きし、発想を広げるリチュアルを紹介してください。"
+  },
+  {
+    "slug": "ritual-emoji-kudos",
+    "title": "“絵文字Kudos”で感謝を瞬時に可視化",
+    "prompt": "Slackのリアクション絵文字を称賛指標として使う運用を提案してください。"
+  },
+  {
+    "slug": "ritual-focus-light",
+    "title": "注意深さを高める“集中ライト”サイン",
+    "prompt": "机上ライトの色で集中状態を示し、話しかけ抑制と集中力向上を実現する方法を解説してください。"
+  },
+  {
+    "slug": "ritual-short-walk-standup",
+    "title": "立ちながら短距離散歩スタンドアップ",
+    "prompt": "オフィス内を歩きながらスタンドアップをし、健康とアイデア出しを両立させる仕組みを紹介してください。"
+  },
+  {
+    "slug": "ritual-weekly-quote",
+    "title": "週替わり名言共有でモチベーションを刺激",
+    "prompt": "月曜朝に名言を1つ共有し、週間テーマとして意識づけるリチュアルを提案してください。"
+  },
+  {
+    "slug": "ritual-photo-of-the-day",
+    "title": "“今日の1枚”フォトシェアでチームの多様性を楽しむ",
+    "prompt": "メンバーの日常写真を日替わりで共有し、チームの距離を縮める施策を紹介してください。"
+  },
+  {
+    "slug": "ritual-5whys-friday",
+    "title": "毎週“5Whys”で根本原因を深掘りする",
+    "prompt": "金曜に1つ課題を選び、5回“なぜ”を問うセッションの運営方法を説明してください。"
+  },
+  {
+    "slug": "ritual-random-wiki-walk",
+    "title": "ランダムWikiウォークで発想の筋トレ",
+    "prompt": "昼休みにWikipediaランダムで新知識を共有する軽量リチュアルを提案してください。"
+  },
+  {
+    "slug": "ritual-victory-pose",
+    "title": "タスク完了後“勝利ポーズ”で気分を高める",
+    "prompt": "成果物提出時に決めポーズを写真共有し、達成感を増幅する文化を紹介してください。"
+  },
+  {
+    "slug": "ritual-morning-playlist",
+    "title": "朝の集中プレイリストを週替わりでキュレート",
+    "prompt": "メンバー交代制で朝BGMを選び、チームの士気を高める取り組みを説明してください。"
+  },
+  {
+    "slug": "ritual-weekend-reflection",
+    "title": "週末リフレクションで来週のスタートを軽くする",
+    "prompt": "金曜終業前に1週間を振り返る3質問フォーマットを共有し、学びを定着させる方法を提案してください。"
+  },
+  {
+    "slug": "ritual-idea-pitch-tuesday",
+    "title": "火曜アイデアピッチでイノベーションの芽を育てる",
+    "prompt": "週1で1人1分の新アイデアピッチを行い、創造性を刺激する運用法を解説してください。"
+  },
+  {
+    "slug": "ritual-color-coded-calendar",
+    "title": "色分けカレンダーで強制的にバランスを取る",
+    "prompt": "カレンダーをカラータグで分類し、会議・集中・学習の割合を最適化する儀式を紹介してください。"
+  },
+  {
+    "slug": "ritual-daily-yoga-micro",
+    "title": "マイクロヨガで姿勢と心をリセット",
+    "prompt": "1日2回1分のヨガポーズを全員で行うリチュアルを提案してください。"
+  },
+  {
+    "slug": "ritual-learning-lottery",
+    "title": "学習ロッタリーで勉強会登壇者をランダム選出",
+    "prompt": "くじ引きで勉強会発表者を決定し、誰もが挑戦する文化を作る方法を説明してください。"
+  },
+  {
+    "slug": "ritual-morning-scan-email",
+    "title": "朝5分メールスキャンで受信箱を空に保つ",
+    "prompt": "メールを即アーカイブ/アクション/削除の3択で処理する習慣を紹介してください。"
+  },
+  {
+    "slug": "ritual-sunlight-break",
+    "title": "日光浴ブレイクで体内時計をリセット",
+    "prompt": "11時に外に出る5分日光浴リチュアルを導入し、集中力を高めた事例を紹介してください。"
+  },
+  {
+    "slug": "ritual-slack-random-coffee",
+    "title": "Slack“Random Coffee”で部署横断の雑談を促進",
+    "prompt": "ペアマッチングBotで週1カジュアル雑談を生み、社内ネットワークを強化する方法を説明してください."
+  },
+  {
+    "slug": "ritual-monthly-retreat",
+    "title": "月次リトリートでビジョンとモチベを再充填",
+    "prompt": "月1回数時間を使い、ビジョン共有とワークショップを行うリチュアル運営術を解説してください。"
+  },
+  {
+    "slug": "ritual-handwritten-card",
+    "title": "手書きカードを誕生日に贈る“温度感”リチュアル",
+    "prompt": "オンライン時代でも手書きメッセージカードを郵送し、温かい文化を守る方法を紹介してください."
+  },
+  {
+    "slug": "ritual-thankful-thursday",
+    "title": "“Thankful Thursday”で感謝をまとめて可視化",
+    "prompt": "木曜に感謝リストを共有する時間を設け、チームの結束を高める方法を提案してください。"
+  },
+  {
+    "slug": "ritual-emoji-energy-bar",
+    "title": "エナジーバー絵文字で瞬時にコンディション共有",
+    "prompt": "チャット名の横に⚡絵文字数でエネルギー残量を示す習慣を説明してください。"
+  },
+  {
+    "slug": "ritual-timeline-toast",
+    "title": "マイルストーン達成時“タイムライントースト”！",
+    "prompt": "重要タイミングで全員でドリンクを掲げるオンライン乾杯リチュアルの運営法を紹介してください。"
+  },
+  {
+    "slug": "ritual-daily-rose-bud-thorn",
+    "title": "“Rose, Bud, Thorn”で日次振り返り",
+    "prompt": "良い点・可能性・課題の3つを共有し、学習とエンゲージメントを高めるリチュアルを提案してください。"
+  },
+  {
+    "slug": "ritual-focus-door-hanger",
+    "title": "ドアハンガーで“集中モード”を可視化する",
+    "prompt": "物理／デジタルドアハンガーを用い、話しかけ禁止タイムを示す仕組みを説明してください。"
+  },
+  {
+    "slug": "ritual-weekly-gratitude-journal",
+    "title": "週次グラティチュードジャーナルでポジティブ蓄積",
+    "prompt": "Notionで感謝ジャーナルテンプレを共有し、習慣化した方法を解説してください。"
+  },
+  {
+    "slug": "ritual-midday-stand-break",
+    "title": "午後2時スタンドブレイクで眠気を吹き飛ばす",
+    "prompt": "午後の眠気タイミングで立ち上がるリマインダーと軽運動リチュアルを紹介してください。"
+  },
+  {
+    "slug": "ritual-huddle-hat",
+    "title": "“ハドルハット”でミニ相談を瞬時に始める合図",
+    "prompt": "相談したい時に帽子やバッジを身に付け、3分ハドルを誘発する文化を提案してください。"
+  },
+  {
+    "slug": "vision-small-action",
+    "title": "ビジョンを“見える化”するミサンガ活用術",
+    "prompt": "企業ビジョンをボンフィレットに刻み、日常的に意識づけするストーリーを作成してください。"
+  },
+  {
+    "slug": "vision-north-star-metric",
+    "title": "ノーススターメトリクスでチームの羅針盤を作る",
+    "prompt": "North Star Metric を設定し、全員が同じ方向を向く仕組みを解説してください。"
+  },
+  {
+    "slug": "vision-storytelling-workshop",
+    "title": "ストーリーテリングWSでビジョンを語れる人を増やす",
+    "prompt": "ビジョンを物語化するワークショップ設計と実例を紹介してください。"
+  },
+  {
+    "slug": "vision-vision-board",
+    "title": "ビジョンボードでメンバーの夢を視覚共有",
+    "prompt": "Notion／ホワイトボードでビジョンボードを作成し、更新運用する方法を提案してください。"
+  },
+  {
+    "slug": "vision-okrs-cascade",
+    "title": "OKRカスケードでビジョンと日常タスクをつなぐ",
+    "prompt": "会社→チーム→個人へ OKR を落とし込む手順と落とし穴を解説してください。"
+  },
+  {
+    "slug": "vision-vision-poster",
+    "title": "オフィスポスターでビジョンを常に視界に入れる",
+    "prompt": "デザインテンプレと印刷場所の選び方、掲示ルールを紹介してください。"
+  },
+  {
+    "slug": "vision-video-message",
+    "title": "CEOビデオメッセージでビジョン浸透率を高める",
+    "prompt": "30秒〜1分のビジョン動画を作成し全社共有するワークフローを提案してください。"
+  },
+  {
+    "slug": "vision-customer-interview-day",
+    "title": "顧客インタビューDAYでビジョンと現場を接続",
+    "prompt": "月1回全員が顧客インタビューに同席し、ビジョンを再確認する仕組みを紹介してください。"
+  },
+  {
+    "slug": "vision-behavioral-principles",
+    "title": "行動指針カードでビジョンを日常判断に落とす",
+    "prompt": "4〜6つの行動指針をカード化し、意思決定時に参照する運用を解説してください。"
+  },
+  {
+    "slug": "vision-vision-pitch",
+    "title": "60秒ビジョンピッチを全員が語れる組織へ",
+    "prompt": "ビジョンを1分で語るトレーニングと練習会の設計方法を提案してください."
+  },
+  {
+    "slug": "vision-values-voting",
+    "title": "バリュー投票でビジョン価値観を再確認する",
+    "prompt": "半年ごとに価値観を投票でリフレッシュする施策と効果を紹介してください。"
+  },
+  {
+    "slug": "vision-vision-retro",
+    "title": "四半期ビジョンレトロで軌道修正を素早く",
+    "prompt": "OKRレトロとの違いと、ビジョンレベルで振り返る質問リストをまとめてください。"
+  },
+  {
+    "slug": "vision-symbolic-objects",
+    "title": "象徴オブジェクトでビジョンを触覚化する",
+    "prompt": "チームのビジョンを象徴する物理アイテムを作り、儀式に活用する方法を説明してください。"
+  },
+  {
+    "slug": "vision-vision-map",
+    "title": "ビジョンマップで長期ロードマップを視覚化",
+    "prompt": "3年後までのロードマップを一枚絵にまとめ、共有する手順を解説してください。"
+  },
+  {
+    "slug": "vision-lunch-and-learn-vision",
+    "title": "ランチ&ラーニングでビジョンを反復学習",
+    "prompt": "ビジョンテーマのLTをランチタイムに行うプログラムを紹介してください。"
+  },
+  {
+    "slug": "vision-vision-quotes",
+    "title": "名言ポスターでビジョンを感情に訴える",
+    "prompt": "ビジョンに関連する名言をグラフィック化し掲示する方法を提案してください。"
+  },
+  {
+    "slug": "vision-book-club",
+    "title": "ビジョン関連書籍の社内読書会を開く",
+    "prompt": "月1読書会でビジョンと連動したテーマ本を読み、議論するフローを解説してください。"
+  },
+  {
+    "slug": "vision-kudos-to-vision",
+    "title": "称賛をビジョン項目に紐づけて可視化する",
+    "prompt": "ピアKudosにビジョンタグを追加し、どの価値観が強化されたかを分析する方法を紹介してください。"
+  },
+  {
+    "slug": "vision-hackathon",
+    "title": "ビジョン実現ハッカソンで斬新なアイデアを量産",
+    "prompt": "ビジョンに沿ったテーマで48hハッカソンを開催し、実装まで繋げる運営を説明してください。"
+  },
+  {
+    "slug": "vision-wall-art",
+    "title": "壁一面アートでビジョンを空間に刻む",
+    "prompt": "オフィス壁にグラフィティアーティストを招き、ビジョンを描いた事例を紹介してください。"
+  },
+  {
+    "slug": "vision-vision-sprint",
+    "title": "四半期“ビジョンスプリント”で軸を研ぎ澄ます",
+    "prompt": "通常業務を一旦止め、ビジョンに直結するテーマに集中する1週間スプリントを解説してください。"
+  },
+  {
+    "slug": "vision-journey-map-day",
+    "title": "ユーザージャーニーマップDAYで視点を合わせる",
+    "prompt": "全員参加でジャーニーマッピングを行い、ビジョンとの整合性を確認するイベントを提案してください."
+  },
+  {
+    "slug": "vision-success-stories",
+    "title": "成功事例ストーリーでビジョンを実感させる",
+    "prompt": "顧客成功事例を記事・動画で共有し、ビジョンが生んだ価値を体感する仕組みを紹介してください。"
+  },
+  {
+    "slug": "vision-vision-coffee",
+    "title": "“ビジョン・コーヒーブレイク”でカジュアル対話",
+    "prompt": "週1雑談タイムにビジョン関連トピックを話し、理解を深める運用を説明してください。"
+  },
+  {
+    "slug": "vision-vision-badges",
+    "title": "ビジョンバッジで行動と価値観をリンク",
+    "prompt": "行動指針に沿った行為をした人にバッジ付与→可視化する仕組みを提案してください。"
+  },
+  {
+    "slug": "vision-visual-metrics-dashboard",
+    "title": "ビジョンKPIダッシュボードをロビーに設置",
+    "prompt": "大型モニタにビジョン関連指標をリアルタイム表示し、意識付ける方法を解説してください。"
+  },
+  {
+    "slug": "vision-customer-voice-wall",
+    "title": "顧客の声ウォールでメンバーを鼓舞",
+    "prompt": "感謝メールやレビューをウォール/Slackチャンネルに貼り、ビジョンへの共感を高める方法を紹介してください."
+  },
+  {
+    "slug": "vision-values-interview",
+    "title": "採用面接に“ビジョン理解”質問を組み込む",
+    "prompt": "カルチャーフィットを測るビジョン質問例と評価基準を提示してください。"
+  },
+  {
+    "slug": "vision-annual-vision-award",
+    "title": "年間ビジョンアワードで象徴的成功を祝う",
+    "prompt": "ビジョン体現者を表彰し、全社に浸透させたアワードの運営法を解説してください."
+  },
+  {
+    "slug": "vision-vision-retreat",
+    "title": "合宿リトリートでビジョンを再定義する",
+    "prompt": "年1回オフサイト合宿でビジョンを見直し、チームビルディングも兼ねた事例を紹介してください。"
+  },
+  {
+    "slug": "vision-vision-remix",
+    "title": "ビジョンリミックスWSで若手の解釈を取り入れる",
+    "prompt": "若手が自由にビジョンを言い換え、ポスターを作成するワークショップを提案してください。"
+  },
+  {
+    "slug": "vision-visual-scrum-goal",
+    "title": "スクラムゴールをビジュアル化して壁に貼る",
+    "prompt": "スプリントゴールをアイコン&色で表し、進捗と一緒に可視化する方法を説してください。"
+  },
+  {
+    "slug": "vision-dream-session",
+    "title": "“Dream Session”で10年後を自由に描く",
+    "prompt": "将来の夢を発表し合い、ビジョンと重ねる対話型セッションを設計してください。"
+  },
+  {
+    "slug": "vision-customer-journey-video",
+    "title": "顧客体験を動画で疑似体験しビジョンを再確認",
+    "prompt": "カスタマージャーニーを動画化し、社内上映会を行う手順を紹介してください。"
+  },
+  {
+    "slug": "vision-wall-of-fame",
+    "title": "ウォールオブフェイムで行動指針の英雄を称える",
+    "prompt": "価値観を体現した行動を写真付きで掲示し、ロールモデルを作る仕組みを説明してください。"
+  },
+  {
+    "slug": "vision-vision-index-card",
+    "title": "名刺サイズ“ビジョンカード”を配布して携帯",
+    "prompt": "社員証ホルダーにビジョンカードを入れ、いつでも思い出せる工夫を紹介してください."
+  },
+  {
+    "slug": "vision-monthly-vision-mail",
+    "title": "月次ビジョンメールで意義を繰り返し発信",
+    "prompt": "CEOが毎月ビジョンと成果を振り返るニュースレターを送る運用を解説してください。"
+  },
+  {
+    "slug": "vision-vision-icebreaker",
+    "title": "会議冒頭に“ビジョンアイスブレイク”を挟む",
+    "prompt": "ビジョンにちなんだ質問で会議を始め、思考を揃える手法を提案してください。"
+  },
+  {
+    "slug": "vision-value-sticker",
+    "title": "ノートPCに貼る“バリューステッカー”",
+    "prompt": "各行動指針をステッカー化し、メンバーがPCに貼る文化を紹介してください。"
+  },
+  {
+    "slug": "vision-vision-snapshot",
+    "title": "四半期ごとにビジョンスナップショットを撮る",
+    "prompt": "ビジョン/KPI/ユーザーストーリーを一枚図にまとめ更新する方法を説明してください."
+  },
+  {
+    "slug": "vision-user-shadowing",
+    "title": "ユーザーシャドーイングで現場目線に立つ",
+    "prompt": "開発者が顧客の1日を追体験し、ビジョンとのギャップを学ぶプログラムを提案してください。"
+  },
+  {
+    "slug": "vision-vision-lightning-talk",
+    "title": "3分LTでビジョン解釈を共有するカルチャー",
+    "prompt": "毎週ライトニングトークでビジョンに関連する気づきを共有するイベントを解説してください。"
+  },
+  {
+    "slug": "vision-vision-podcast",
+    "title": "社内ビジョンPodcastで継続的に発信",
+    "prompt": "CEOや顧客の声をポッドキャストにまとめ、通勤時間で学べる仕組みを紹介してください。"
+  },
+  {
+    "slug": "vision-innovation-day",
+    "title": "イノベーションデーでビジョンに挑戦する1日",
+    "prompt": "通常業務を離れ、ビジョンに沿った新プロトタイプを作る1日イベントを運営する方法を説明してください."
+  },
+  {
+    "slug": "vision-values-speed-dating",
+    "title": "“バリュースピードデーティング”で価値観を深掘り",
+    "prompt": "メンバーが2分ずつ価値観テーマを語り合うイベントを提案してください。"
+  },
+  {
+    "slug": "vision-vision-temperature-check",
+    "title": "月次ビジョン温度チェックで温度差を測る",
+    "prompt": "簡単なアンケートでビジョン理解度・共感度を測り、ヒートマップで可視化する方法を解説してください。"
+  },
+  {
+    "slug": "vision-value-based-reward",
+    "title": "価値観表彰制度でビジョン行動に報いる",
+    "prompt": "行動指針を体現した行動にポイントを付与し、報酬と交換する制度を紹介してください。"
+  },
+  {
+    "slug": "vision-vision-canvas",
+    "title": "ビジョンキャンバスで全員参加型策定プロセス",
+    "prompt": "ビジョンキャンバスフレームワークを使い、ワークショップでビジョンを練り上げる方法を説明してください。"
+  },
+  {
+    "slug": "vision-gamified-vision-quiz",
+    "title": "ゲーミフィケーションクイズでビジョン記憶率UP",
+    "prompt": "kahoot! 等でビジョンに関するクイズ大会を行う運用を提案してください。"
+  },
+  {
+    "slug": "vision-vision-art-contest",
+    "title": "ビジョンアートコンテストで創造力を刺激",
+    "prompt": "ビジョンをテーマにイラスト/動画を公募し、投票で表彰するイベントを紹介してください。"
+  },
+  {
+    "slug": "vision-mentor-program",
+    "title": "ビジョンメンター制度で新入社員をサポート",
+    "prompt": "入社3ヶ月はメンターがビジョンを語り続け、行動指針を体現する制度を説明してください."
+  },
+  {
+    "slug": "vision-vision-journey-wall",
+    "title": "“ビジョンジャーニーウォール”で進捗を示す",
+    "prompt": "ビジョン達成に向けた里程標を壁に貼り、進捗をステッカーで更新する仕組みを解説してください。"
   }
 ]
